feat: Create the logic and API for the delete button
